# memory-mcp

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  smithery.yaml
.cursor/: rules
memory_mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  conftest.py  test_database_manager.py  test_integration.py  test_mcp_tools.py  test_server.py
