[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for storing and retrieving memories"
authors = [
    {name = "Diederik van Liere (dvanliere@gmail.com)"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]==1.6.0",
    "pydantic==2.11.2",
    "typing-extensions>=4.13.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
memory-mcp = "memory_mcp:main"

[tool.setuptools.packages.find]
include = ["memory_mcp*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function" 